# LLM-Geo

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .temp_test_run_data.json
data/: sample_parks.geojson  sample_points.geojson  sample_region.geojson  sample_roads.geojson
llm_geo/: __init__.py  artifacts.py  cli.py  coder.py  contracts.py  executor.py  graph.py  llm.py  models.py  ops.py  planner.py  registry.py  report.py  structured_output.py  synthetic.py  system.py  trace.py
llm_geo/middleware/: __init__.py  logging.py
llm_geo/operations/: __init__.py  aor_calculation.py  basic.py  generate_mcpo_client_and_facade.py  generate_openapi_operations.py  public_data_providers.py  registry.py  retrieval.py
llm_geo/operations/debug/: __init__.py  geo.py
llm_geo/operations/openapi/: __init__.py  classify.py  generator.py  models.py  parser.py  renderer.py  runtime.py  servers.py
llm_geo/subagents/: __init__.py  runtime.py  supervisor.py
llm_geo/tools/: __init__.py  code_execution.py  data_inspection.py  data_retrieval.py  mermaid_diagnostics.py  public_data_providers.py  workflow_graph.py
llm_geo/utils/: __init__.py  models.py  prompts.py  timing.py
scripts/: model_structured_output_benchmarks.py
tests/: __init__.py  test_artifacts.py  test_map_node.py  test_pipeline.py  test_repair.py  test_report.py
tests/evals/: __init__.py  dag_scenarios.py  support.py  test_agentic_dag_tasks.py  test_workflow_state.py
tests/fixtures/openapi/: demo.json
tests/unit/: __init__.py  test_code_history.py  test_data_inspection.py  test_data_retrieval.py  test_debug_operations.py  test_logging.py  test_main_configuration.py  test_mermaid_diagnostics.py  test_openapi_operations.py  test_operation_retrieval.py  test_prompt_persistence.py  test_registered_operations.py  test_structured_output.py  test_supervisor.py  test_system_efficiency.py  test_system_timing.py
