[project]
name = "llm-geo-claude"
version = "0.1.0"
description = "Agentic LLM Geo-Analysis: DAG-planned, node-validated geospatial pipelines"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=1.0",
    "langchain>=1.0",
    "langchain-openai>=1.0",
    "deepagents>=0.6",
    "geopandas>=1.1",
    "shapely>=2.1",
    "networkx>=3.4",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "dotenv (>=0.9.9,<0.10.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
